@@ -890,6 +890,9 @@ HELPANDMANUAL_FILTER_NAME=Help & Manual Files
 # Typo3Filter.java
 TYPO3_FILTER_NAME=Typo3 LocManager Files
 
+# L10nmgrFilter.java
+L10NMGR_FILTER_NAME=Typo3 l10nmgr Files
+
 # WixFilter.java
 WIX_FILTER_NAME=WiX Localization Files
 
