@@ -837,6 +837,9 @@ HELPANDMANUAL_FILTER_NAME=Fichiers Help & Manual
 # Typo3Filter.java
 TYPO3_FILTER_NAME=Fichiers LocManager Typo3
 
+# L10nmgrFilter.java
+L10NMGR_FILTER_NAME=Fichiers l10nmgr Typo3
+
 # WixFilter.java
 WIX_FILTER_NAME=Fichiers de localisation WiX
 
